[ADDED] pack label
Former-commit-id: 4f0acb5aac2daeae0a43bdd0197cc1cc7db894c5

--- a/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
+++ b/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
@@ -196,6 +196,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="03.label"
+				>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackLabel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackLabel.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="tools"
@@ -205,11 +217,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\libsprpacker\check.cpp"
+				RelativePath="..\..\..\src\libsprpacker\check.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\libsprpacker\check.h"
+				RelativePath="..\..\..\src\libsprpacker\to_int.h"
 				>
 			</File>
 		</Filter>
