--- a/simp/platform/msvc2008/projects/simp.vcproj
+++ b/simp/platform/msvc2008/projects/simp.vcproj
@@ -146,18 +146,6 @@
 	</References>
 	<Files>
 		<Filter
-			Name="node"
-			>
-			<File
-				RelativePath="..\..\..\src\simp\simp_label.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\simp\simp_label.h"
-				>
-			</File>
-		</Filter>
-		<Filter
 			Name="01.picture"
 			>
 			<File
@@ -170,7 +158,7 @@
 			</File>
 		</Filter>
 		<Filter
-			Name="01.scale9"
+			Name="02.scale9"
 			>
 			<File
 				RelativePath="..\..\..\src\simp\simp_scale9.c"
@@ -178,6 +166,18 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\simp\simp_scale9.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="03.label"
+			>
+			<File
+				RelativePath="..\..\..\src\simp\simp_label.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\simp\simp_label.h"
 				>
 			</File>
 		</Filter>
