[FIXED] scissor close & open
Former-commit-id: 955b814924877ec4023504c79371562943ced99e

--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -929,11 +929,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\source\render\RenderScissorStack.cpp"
+				RelativePath="..\..\..\source\render\RenderScissor.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\include\sprite2\RenderScissorStack.h"
+				RelativePath="..\..\..\include\sprite2\RenderScissor.h"
 				>
 			</File>
 			<File
