[ADDED] action for ecomplex spr
Former-commit-id: 09051509dbe2b95ac5e1f94fbc6b86146e4a0c30

--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -364,6 +364,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\libcomplex\SpritePropertySetting.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcomplex\SpritePropertySetting.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libcomplex\SymbolPropertySetting.cpp"
 					>
 				</File>
