rm symbol update
Former-commit-id: 80b7015d9af819e5588db10a987d328fa231a949

--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -916,6 +916,26 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="proxy"
+				>
+				<File
+					RelativePath="..\..\..\source\sprites\ProxySprite.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\sprite2\ProxySprite.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\source\sprites\ProxySymbol.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\sprite2\ProxySymbol.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="utility"
