--- a/easyeditor/platform/msvc2008/projects/libview.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libview.vcproj
@@ -657,6 +657,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\source\view\others\FilepathDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\ee\FilepathDialog.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\view\others\FinishDialog.cpp"
 					>
 				</File>
