--- a/glue/platform/msvc2008/projects/glue.vcproj
+++ b/glue/platform/msvc2008/projects/glue.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\particle\src;..\..\..\..\dtex\src;..\..\..\..\ejoy2d\src;..\..\..\..\shaderlab\src\shaderlab;..\..\..\..\model3\src\model3;..\..\..\..\camera25\src\camera25;..\..\..\..\sm\src\sm;..\..\..\..\ds\src\ds;..\..\..\..\cu\src\cu;..\..\..\..\sprite2\include;&quot;..\..\..\..\editor-external\cjson\include&quot;;&quot;..\..\..\..\editor-external\lzma\include&quot;;&quot;..\..\..\..\editor-external\pthread\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\libjpeg\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\assimp\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\include\glue;..\..\..\..\particle\src;..\..\..\..\dtex\src;..\..\..\..\ejoy2d\src;..\..\..\..\shaderlab\src\shaderlab;..\..\..\..\model3\src\model3;..\..\..\..\camera25\src\camera25;..\..\..\..\sm\src\sm;..\..\..\..\ds\src\ds;..\..\..\..\cu\src\cu;..\..\..\..\sprite2\include;&quot;..\..\..\..\editor-external\cjson\include&quot;;&quot;..\..\..\..\editor-external\lzma\include&quot;;&quot;..\..\..\..\editor-external\pthread\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\libjpeg\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\assimp\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -106,7 +106,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\particle\src;..\..\..\..\dtex\src;..\..\..\..\ejoy2d\src;..\..\..\..\shaderlab\src\shaderlab;..\..\..\..\model3\src\model3;..\..\..\..\camera25\src\camera25;..\..\..\..\sm\src\sm;..\..\..\..\ds\src\ds;..\..\..\..\cu\src\cu;..\..\..\..\sprite2\include;&quot;..\..\..\..\editor-external\cjson\include&quot;;&quot;..\..\..\..\editor-external\lzma\include&quot;;&quot;..\..\..\..\editor-external\pthread\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\libjpeg\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\assimp\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\include\glue;..\..\..\..\particle\src;..\..\..\..\dtex\src;..\..\..\..\ejoy2d\src;..\..\..\..\shaderlab\src\shaderlab;..\..\..\..\model3\src\model3;..\..\..\..\camera25\src\camera25;..\..\..\..\sm\src\sm;..\..\..\..\ds\src\ds;..\..\..\..\cu\src\cu;..\..\..\..\sprite2\include;&quot;..\..\..\..\editor-external\cjson\include&quot;;&quot;..\..\..\..\editor-external\lzma\include&quot;;&quot;..\..\..\..\editor-external\pthread\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\libjpeg\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\assimp\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EASY_EDITOR"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -152,42 +152,42 @@
 			Name="render"
 			>
 			<File
-				RelativePath="..\..\..\src\render\RenderContext.cpp"
+				RelativePath="..\..\..\source\render\RenderContext.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\render\RenderContext.h"
+				RelativePath="..\..\..\include\RenderContext.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\render\ScreenCache.cpp"
+				RelativePath="..\..\..\source\render\ScreenCache.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\render\ScreenCache.h"
+				RelativePath="..\..\..\include\ScreenCache.h"
 				>
 			</File>
 			<Filter
 				Name="camera"
 				>
 				<File
-					RelativePath="..\..\..\src\render\Camera.h"
+					RelativePath="..\..\..\include\Camera.h"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\render\OrthoCamera.cpp"
+					RelativePath="..\..\..\source\render\OrthoCamera.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\render\OrthoCamera.h"
+					RelativePath="..\..\..\include\OrthoCamera.h"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\render\Pseudo3DCamera.cpp"
+					RelativePath="..\..\..\source\render\Pseudo3DCamera.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\render\Pseudo3DCamera.h"
+					RelativePath="..\..\..\include\Pseudo3DCamera.h"
 					>
 				</File>
 			</Filter>
@@ -195,119 +195,115 @@
 		<Filter
 			Name="dataset"
 			>
+			<File
+				RelativePath="..\..\..\include\Resource.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ResourceManager.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ResourceManager.inl"
+				>
+			</File>
 			<Filter
 				Name="image"
 				>
 				<File
-					RelativePath="..\..\..\src\dataset\ImageSymbolOld.cpp"
+					RelativePath="..\..\..\source\dataset\Image.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\dataset\ImageSymbolOld.h"
+					RelativePath="..\..\..\include\Image.h"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\dataset\JpegLoader.cpp"
+					RelativePath="..\..\..\source\dataset\JpegLoader.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\dataset\JpegLoader.h"
+					RelativePath="..\..\..\include\JpegLoader.h"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\dataset\PngLoader.cpp"
+					RelativePath="..\..\..\source\dataset\PngLoader.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\dataset\PngLoader.h"
+					RelativePath="..\..\..\include\PngLoader.h"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\dataset\Texture.cpp"
+					RelativePath="..\..\..\source\dataset\Texture.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\dataset\Texture.h"
+					RelativePath="..\..\..\include\Texture.h"
 					>
 				</File>
-			</Filter>
-			<Filter
-				Name="res_mgr"
-				>
-				<File
-					RelativePath="..\..\..\src\dataset\Resource.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\dataset\ResourceManager.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\dataset\ResourceManager.inl"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\dataset\SymbolFactory.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\dataset\SymbolFactory.h"
-					>
-				</File>
-				<Filter
-					Name="res"
-					>
-					<File
-						RelativePath="..\..\..\src\dataset\Image.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\dataset\Image.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\dataset\ImageSymbol.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\dataset\ImageSymbol.h"
-						>
-					</File>
-				</Filter>
 			</Filter>
 		</Filter>
 		<Filter
 			Name="utility"
 			>
 			<File
-				RelativePath="..\..\..\src\utility\AssimpHelper.cpp"
+				RelativePath="..\..\..\source\utility\AssimpHelper.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\utility\AssimpHelper.h"
+				RelativePath="..\..\..\include\AssimpHelper.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\utility\Exception.cpp"
+				RelativePath="..\..\..\source\utility\Exception.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\utility\Exception.h"
+				RelativePath="..\..\..\include\Exception.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\utility\StringHelper.cpp"
+				RelativePath="..\..\..\source\utility\StringHelper.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\utility\StringHelper.h"
+				RelativePath="..\..\..\include\StringHelper.h"
 				>
 			</File>
 		</Filter>
-		<File
-			RelativePath="..\..\..\src\glue.h"
+		<Filter
+			Name="sprite"
 			>
-		</File>
+			<File
+				RelativePath="..\..\..\source\sprite\SymbolFactory.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\SymbolFactory.h"
+				>
+			</File>
+			<Filter
+				Name="01.picture"
+				>
+				<File
+					RelativePath="..\..\..\source\sprite\ImageSymbol.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\ImageSymbol.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\source\sprite\ImageSymbolOld.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\ImageSymbolOld.h"
+					>
+				</File>
+			</Filter>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
