[ADDED] some aop
Former-commit-id: 2379520f5fa73d05801cd0b7aea22f83f86edcda

--- a/easyeditor/platform/msvc2008/projects/libedit.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libedit.vcproj
@@ -269,6 +269,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\source\edit\record\ReorderSpriteAOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\ee\ReorderSpriteAOP.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\edit\record\RotateSpriteAOP.cpp"
 					>
 				</File>
