[ADDED] set layer tag's redo top
Former-commit-id: d01e645c7e8e724ada4d5789468ac3ed93f9d690

--- a/easyeditor/platform/msvc2008/projects/libedit.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libedit.vcproj
@@ -151,7 +151,7 @@
 	</References>
 	<Files>
 		<Filter
-			Name="record"
+			Name="aop"
 			>
 			<File
 				RelativePath="..\..\..\source\edit\record\AtomicFactory.cpp"
