[FIXED] glue image load
Former-commit-id: 95251593bc3299e194830f514177abe5690e4853

--- a/glue/platform/msvc2008/projects/glue.vcproj
+++ b/glue/platform/msvc2008/projects/glue.vcproj
@@ -255,6 +255,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\include\glue\ImageLoader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\glue\ImageLoader.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\dataset\JpegLoader.cpp"
 					>
 				</File>
