[ADDED] complex to glue
Former-commit-id: 364363bc8106ffb44dd247132154f2efb5198781

--- a/glue/platform/msvc2008/projects/glue.vcproj
+++ b/glue/platform/msvc2008/projects/glue.vcproj
@@ -439,6 +439,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="06.complex"
+				>
+				<File
+					RelativePath="..\..\..\source\sprite\ComplexSymbol.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\glue\ComplexSymbol.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="adapter"
