--- a/glue/platform/msvc2008/projects/test.vcproj
+++ b/glue/platform/msvc2008/projects/test.vcproj
@@ -222,6 +222,14 @@
 			Name="node"
 			>
 			<File
+				RelativePath="..\..\..\sample\TestComplex.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\sample\TestComplex.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\sample\TestLabel.cpp"
 				>
 			</File>
