--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -66,7 +66,7 @@
 				AdditionalDependencies="wxmsw30ud_gl.lib wxmsw30ud_propgrid.lib wxmsw30ud_adv.lib wxmsw30ud_stc.lib wxmsw30ud_core.lib wxbase30ud.lib wxscintillad.lib wxtiffd.lib wxjpegd.lib wxpngd.lib comctl32.lib rpcrt4.lib jsond.lib freetype250_D.lib glfwd.lib md5d.lib libgifd.lib libpngd.lib glew32sd.lib luad.lib lzmad.lib zlibd.lib PVRTexLib.lib cjsond.lib pthreadVC2.lib"
 				OutputFile="..\easydb_cl\x86\Debug\easydb_cl.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\..\..\..\editor-external\wx\lib;..\..\..\..\editor-external\gl\lib;..\..\..\..\editor-external\json\lib;..\..\..\..\editor-external\freetype\lib;..\..\..\..\editor-external\libpng\lib;..\..\..\..\editor-external\md5\lib;..\..\..\..\editor-external\giflib\lib;..\..\..\..\editor-external\zlib\lib;..\..\..\..\editor-external\lzma\lib;..\..\..\..\editor-external\intel;..\..\..\..\editor-external\glfw\lib;..\..\..\..\editor-external\pvrtextool\lib;..\..\..\..\editor-external\lua\lib;..\..\..\..\editor-external\cjson\lib;..\..\..\..\editor-external\pthread\lib\x86"
+				AdditionalLibraryDirectories="&quot;..\..\..\..\editor-external\wx\lib&quot;;&quot;..\..\..\..\editor-external\gl\lib&quot;;&quot;..\..\..\..\editor-external\json\lib&quot;;&quot;..\..\..\..\editor-external\freetype\lib&quot;;&quot;..\..\..\..\editor-external\libpng\lib&quot;;&quot;..\..\..\..\editor-external\md5\lib&quot;;&quot;..\..\..\..\editor-external\giflib\lib&quot;;&quot;..\..\..\..\editor-external\zlib\lib&quot;;&quot;..\..\..\..\editor-external\lzma\lib&quot;;&quot;..\..\..\..\editor-external\intel&quot;;&quot;..\..\..\..\editor-external\glfw\lib&quot;;&quot;..\..\..\..\editor-external\pvrtextool\lib&quot;;&quot;..\..\..\..\editor-external\lua\lib&quot;;&quot;..\..\..\..\editor-external\cjson\lib&quot;;&quot;..\..\..\..\editor-external\pthread\lib\x86&quot;;&quot;..\..\..\..\editor-external\boost\lib&quot;"
 				IgnoreDefaultLibraryNames="LIBC.LIB"
 				DelayLoadDLLs=""
 				GenerateDebugInformation="true"
@@ -148,7 +148,7 @@
 				AdditionalDependencies="wxmsw30u_gl.lib wxmsw30u_propgrid.lib wxmsw30u_adv.lib wxmsw30u_stc.lib wxmsw30u_core.lib wxbase30u.lib wxscintilla.lib wxtiff.lib wxjpeg.lib wxpng.lib comctl32.lib rpcrt4.lib json.lib freetype250.lib md5.lib glew32s.lib lua.lib libgif.lib zlib.lib lzma.lib libpng.lib glfw.lib PVRTexLib.lib cjson.lib pthreadVC2.lib"
 				OutputFile="..\easydb_cl\x86\Release\easydb_cl.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\..\..\..\editor-external\wx\lib;..\..\..\..\editor-external\gl\lib;..\..\..\..\editor-external\json\lib;..\..\..\..\editor-external\freetype\lib;..\..\..\..\editor-external\libpng\lib;..\..\..\..\editor-external\md5\lib;..\..\..\..\editor-external\giflib\lib;..\..\..\..\editor-external\zlib\lib;..\..\..\..\editor-external\lzma\lib;..\..\..\..\editor-external\intel;..\..\..\..\editor-external\glfw\lib;..\..\..\..\editor-external\pvrtextool\lib;..\..\..\..\editor-external\lua\lib;..\..\..\..\editor-external\cjson\lib;..\..\..\..\editor-external\pthread\lib\x86"
+				AdditionalLibraryDirectories="&quot;..\..\..\..\editor-external\wx\lib&quot;;&quot;..\..\..\..\editor-external\gl\lib&quot;;&quot;..\..\..\..\editor-external\json\lib&quot;;&quot;..\..\..\..\editor-external\freetype\lib&quot;;&quot;..\..\..\..\editor-external\libpng\lib&quot;;&quot;..\..\..\..\editor-external\md5\lib&quot;;&quot;..\..\..\..\editor-external\giflib\lib&quot;;&quot;..\..\..\..\editor-external\zlib\lib&quot;;&quot;..\..\..\..\editor-external\lzma\lib&quot;;&quot;..\..\..\..\editor-external\intel&quot;;&quot;..\..\..\..\editor-external\glfw\lib&quot;;&quot;..\..\..\..\editor-external\pvrtextool\lib&quot;;&quot;..\..\..\..\editor-external\lua\lib&quot;;&quot;..\..\..\..\editor-external\cjson\lib&quot;;&quot;..\..\..\..\editor-external\pthread\lib\x86&quot;;&quot;..\..\..\..\editor-external\boost\lib&quot;"
 				IgnoreDefaultLibraryNames="LIBC.LIB"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="..\easydb_cl\x86\Release\easydb_cl.pdb"
@@ -619,6 +619,14 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\easydb_cl\FixJsonBase.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\FixOldScale9.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\FixOldScale9.h"
 					>
 				</File>
 				<File
