[ADDED] textbox loader
Former-commit-id: 366dbee6221b4e49969d6ade67f0b38c7c267f77

--- a/glue/platform/msvc2008/projects/glue.vcproj
+++ b/glue/platform/msvc2008/projects/glue.vcproj
@@ -439,6 +439,14 @@
 				Name="05.label"
 				>
 				<File
+					RelativePath="..\..\..\source\sprite\TextboxLoader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\glue\TextboxLoader.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\sprite\TextboxSprLoader.cpp"
 					>
 				</File>
@@ -452,14 +460,6 @@
 				</File>
 				<File
 					RelativePath="..\..\..\include\glue\TextboxSymbol.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\source\sprite\TextboxSymLoader.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\include\glue\TextboxSymLoader.h"
 					>
 				</File>
 			</Filter>
